# ca-switch

./: .gitignore  Cargo.toml  README.md
.opencode/agent/: git.md
src/: cli.rs  error.rs  main.rs
src/commands/: backup.rs  claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  prompt.rs
src/config/: claude_manager.rs  codex_manager.rs  detector.rs  file_manager.rs  gemini_manager.rs  manager.rs  mod.rs  models.rs  opencode_manager.rs  webdav.rs
src/ui/: menu.rs  mod.rs  style.rs
